--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,7 +10,7 @@
     "execution_start": 1647517924861,
     "execution_millis": 4,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 111.6875
+    "deepnote_cell_height": 112
    },
    "source": "print(\"Hello World!\")",
    "execution_count": 1,
@@ -24,9 +24,33 @@
   },
   {
    "cell_type": "code",
-   "source": "",
    "metadata": {
     "cell_id": "4da794a2-ab10-4e30-a7f3-d9243f1439f7",
+    "tags": [],
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 66
+   },
+   "source": "print(\"Skipidip\")",
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "cell_id": "9846208d-e9fa-4e3f-a433-6e8b0522b3b1",
+    "tags": [],
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 66
+   },
+   "source": "print(\"bap bap\")",
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "source": "print(\"hej\")",
+   "metadata": {
+    "cell_id": "3bc9ee99-37e6-4c72-b724-ed93c2b2dc6c",
     "tags": [],
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 66
@@ -38,7 +62,7 @@
    "cell_type": "code",
    "source": "",
    "metadata": {
-    "cell_id": "9846208d-e9fa-4e3f-a433-6e8b0522b3b1",
+    "cell_id": "10543662-321c-40f3-b54a-9d4b74b268d3",
     "tags": [],
     "deepnote_cell_type": "code"
    },
