Feature score plot

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -29,7 +29,7 @@
     "allow_embed": false,
     "output_cleared": false,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 421,
+    "deepnote_cell_height": 421.1875,
     "deepnote_output_heights": [
      null,
      254
@@ -73,7 +73,7 @@
     "execution_millis": 248,
     "output_cleared": false,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 421,
+    "deepnote_cell_height": 421.1875,
     "deepnote_output_heights": [
      null,
      254
@@ -117,7 +117,7 @@
     "execution_millis": 316,
     "output_cleared": false,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 565,
+    "deepnote_cell_height": 565.1875,
     "deepnote_output_heights": [
      null,
      254
@@ -299,7 +299,7 @@
     "execution_millis": 574,
     "output_cleared": false,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 1510.1875,
+    "deepnote_cell_height": 1510.375,
     "deepnote_output_heights": [
      403,
      null,
@@ -380,9 +380,9 @@
     "execution_millis": 509,
     "output_cleared": false,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 814,
+    "deepnote_cell_height": 814.1875,
     "deepnote_output_heights": [
-     null,
+     21.1875,
      233
     ]
    },
@@ -746,10 +746,7 @@
     "execution_start": 1648226627018,
     "execution_millis": 122,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 1314,
-    "deepnote_output_heights": [
-     596.8125
-    ]
+    "deepnote_cell_height": 702.1875
    },
    "source": "from rotate import degrees_to_rotate\nfrom skimage.filters import gaussian\n# test rotated_data/example_segmentation_rotated/ISIC_0015401_segmentation.png\n# testim = plt.imread('rotated_data/example_segmentation_resized_rotated/ISIC_0003462_segmentation.png')\ntestim = plt.imread('rotated_data/example_segmentation_resized_rotated/ISIC_0015401_segmentation.png')\ntestim[testim > 0.1] = 1\ntestim[testim <= 0.1] = 0\n\nsplit_h, split_v = testim.shape[0]//2, testim.shape[1]//2\n\n\nprint(testim.shape, split_h, split_v)\n\n\n# skricv if statement hvis lige ikke plus en hvis ulige gør\n# testim.shape[1]%2 lægger 1 til, hvis ulige og ellers ikke, har samme funktion som et if statement ville\nleft_side = testim[:,:split_v]\nright_side = testim[:,split_v + testim.shape[1]%2:]\n # flip the right side vertically \nright_side = np.flip(right_side,1)\n\n# add the left side with the flipped right side and compute non-overlapping area \n# (count the 1's)\n\ntotal_area = np.sum(testim[testim == 1])\n\n#folded_image = right_side + left_side \n\n\nnp.unique(testim)\nsummed_img = left_side + right_side\nprint(np.sum(summed_img[summed_img == 1]) * 2 / total_area)",
    "execution_count": null,
