More plots and figures

--- a/plots.ipynb
+++ b/plots.ipynb
@@ -42,9 +42,9 @@
     "execution_start": 1649275295491,
     "execution_millis": 88366,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 242,
+    "deepnote_cell_height": 242.078125,
     "deepnote_output_heights": [
-     21
+     21.1875
     ]
    },
    "source": "sns.pairplot(data=df, hue=\"melanoma\", diag_kind=\"kde\", diag_kws={\"common_norm\": False})",
@@ -97,6 +97,7 @@
     "source_hash": "7bded611",
     "execution_start": 1649275387139,
     "execution_millis": 4776,
+    "owner_user_id": "9f7938c4-a781-4d9c-bc76-659de9a5470f",
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 780,
     "deepnote_output_heights": [
@@ -132,7 +133,7 @@
     "execution_start": 1649275396878,
     "execution_millis": 726,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 556,
+    "deepnote_cell_height": 556.1875,
     "deepnote_output_heights": [
      null,
      363
@@ -184,7 +185,7 @@
     "execution_start": 1649275400256,
     "execution_millis": 52,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 144
+    "deepnote_cell_height": 144.1875
    },
    "source": "pearsonr(df[\"color_dist\"], df[\"color_sd\"])",
    "execution_count": null,
@@ -268,9 +269,9 @@
     "execution_start": 1649275405800,
     "execution_millis": 1125,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 1121,
+    "deepnote_cell_height": 1083.203125,
     "deepnote_output_heights": [
-     556
+     518.203125
     ]
    },
    "source": "from sklearn.feature_selection import chi2\ndf = pd.read_csv(\"features/features_train.csv\")\nX = df.drop([\"image_id\", \"melanoma\"], axis=1)\ny = df[\"melanoma\"]\n# feature_names = [\n#     \"asymmetry\",\n#     \"asymmetry_gauss\",\n#     \"area\",\n#     \"perimeter\",\n#     \"compactness\",\n#     \"color_dist\",\n#     \"color_sd\",\n#     \"color_score\",\n# ]\nfeature_names = list(df)[2:]\nselector = SelectKBest(mutual_info_classif, k=2)\nselector.fit(X, y)\n\n# Show the feature scores\nscores = selector.scores_\n\n\nfig, ax = plt.subplots(figsize=(12,8))\nax.bar(feature_names, scores, width=.2)\nax.set_xlabel('feature index')\nax.set_ylabel('mutual information')\nplt.xticks(rotation=60);",
@@ -302,7 +303,7 @@
     "execution_start": 1649275409776,
     "execution_millis": 3,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 116
+    "deepnote_cell_height": 116.1875
    },
    "source": "print(list(df)[2:])",
    "execution_count": null,
@@ -324,7 +325,7 @@
     "execution_start": 1649280094435,
     "execution_millis": 516,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 2359,
+    "deepnote_cell_height": 2355.84375,
     "deepnote_output_heights": [
      null,
      264
@@ -364,7 +365,7 @@
     "execution_start": 1649158597077,
     "execution_millis": 32977,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 1594
+    "deepnote_cell_height": 1587.296875
    },
    "source": "df = pd.read_csv(\"features/features_train.csv\")\nx_train = df.drop([\"image_id\", \"melanoma\"], axis=1).to_numpy()\nfeature_names = np.array(list(df)[2:])\ny = np.array(df[\"melanoma\"])\nclf = KNeighborsClassifier(n_neighbors=5)\nkf = StratifiedShuffleSplit(n_splits=5, test_size=0.4, random_state=1)\nn_features = 6\n\nselector = SequentialFeatureSelector(clf, n_features_to_select=n_features, direction=\"forward\", cv=kf)\nsfs_forward = selector.fit(x_train, y)\nprint(\"Forward selected features\")\nprint(feature_names[sfs_forward.get_support()])\nprint()\n\nselector = SequentialFeatureSelector(clf, n_features_to_select=n_features, direction=\"backward\", cv=kf)\nsfs_backward = selector.fit(x_train, y)\nprint(\"Backwards selected features\")\nprint(feature_names[sfs_backward.get_support()])\nprint()\n\nfeatures_fb = [feature_names[sfs.get_support()] for sfs in [sfs_forward, sfs_backward]]\n\nfor j, features in enumerate(features_fb):\n    x = df[features].to_numpy()\n    x = StandardScaler().fit_transform(x)\n    acc_val_knn = np.empty((n_splits, 1))\n    auc_val_knn = np.empty((n_splits, 1))\n    acc_val_tree = np.empty((n_splits, 1))\n    auc_val_tree = np.empty((n_splits, 1))\n\n    k = 5\n    for i, (train_index, val_index) in enumerate(kf.split(x, y)):\n        x_train, x_val = x[train_index], x[val_index]\n        y_train, y_val = y[train_index], y[val_index]\n\n        clf = KNeighborsClassifier(n_neighbors=k)\n        clf = clf.fit(x_train, y_train)\n        y_pred_val = clf.predict(x_val)\n        y_prob_val = clf.predict_proba(x_val)[:,1]\n        # display = RocCurveDisplay.from_estimator(clf, x_val, y_val, ax=axes[i])\n        \n        acc_val_knn[i] = accuracy_score(y_val, y_pred_val)\n        auc_val_knn[i] = roc_auc_score(y_val, y_prob_val)\n\n        clf = DecisionTreeClassifier(random_state=1)\n        clf.fit(x_train, y_train)\n        y_pred_val = clf.predict(x_val)\n        y_prob_val = clf.predict_proba(x_val)[:,1]\n\n        acc_val_tree[i] = accuracy_score(y_val, y_pred_val)\n        auc_val_tree[i] = roc_auc_score(y_val, y_prob_val)\n        \n    print(\"KNN Accuracy scores\")\n    print(f\"acc_score: {np.mean(acc_val_knn):.3f} ±{np.std(acc_val_knn):.2f}\")\n    print(f\"auc_score: {np.mean(auc_val_knn):.3f} ±{np.std(auc_val_knn):.2f}\")\n    print(\"_\"*30)\n    print(\"Decision Tree Accuracy scores\")\n    print(f\"acc_score: {np.mean(acc_val_knn):.3f} ±{np.std(acc_val_tree):.2f}\")\n    print(f\"auc_score: {np.mean(auc_val_knn):.3f} ±{np.std(auc_val_tree):.2f}\")\n    print()",
    "execution_count": null,
@@ -386,7 +387,7 @@
     "execution_start": 1649158760079,
     "execution_millis": 7306,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 1706
+    "deepnote_cell_height": 1698.6875
    },
    "source": "df = pd.read_csv(\"features/features_train.csv\")\ndrop_cols = [\"image_id\", \"melanoma\", \"color_sd_10_10\", \"color_dist_10_5\", \"color_sd_10_5\", \"color_dist_5_5\", \"color_sd_5_5\", \"color_dist_5_10\", \"color_sd_5_10\"]\nx_train = df.drop(drop_cols, axis=1).to_numpy()\nfeature_names = list(df)\nfor col in drop_cols:\n    feature_names.remove(col)\nfeature_names = np.array(feature_names)\ny = np.array(df[\"melanoma\"])\nclf = KNeighborsClassifier(n_neighbors=5)\nkf = StratifiedShuffleSplit(n_splits=5, test_size=0.4, random_state=1)\nn_features = 6\n\nselector = SequentialFeatureSelector(clf, n_features_to_select=n_features, direction=\"forward\", cv=kf)\nsfs_forward = selector.fit(x_train, y)\nprint(\"Forward selected features\")\nprint(feature_names[sfs_forward.get_support()])\nprint()\n\nselector = SequentialFeatureSelector(clf, n_features_to_select=n_features, direction=\"backward\", cv=kf)\nsfs_backward = selector.fit(x_train, y)\nprint(\"Backwards selected features\")\nprint(feature_names[sfs_backward.get_support()])\nprint()\n\nfeatures_fb = [feature_names[sfs.get_support()] for sfs in [sfs_forward, sfs_backward]]\n\nfor j, features in enumerate(features_fb):\n    x = df[features].to_numpy()\n    x = StandardScaler().fit_transform(x)\n    acc_val_knn = np.empty((n_splits, 1))\n    auc_val_knn = np.empty((n_splits, 1))\n    acc_val_tree = np.empty((n_splits, 1))\n    auc_val_tree = np.empty((n_splits, 1))\n\n    k = 5\n    for i, (train_index, val_index) in enumerate(kf.split(x, y)):\n        x_train, x_val = x[train_index], x[val_index]\n        y_train, y_val = y[train_index], y[val_index]\n\n        clf = KNeighborsClassifier(n_neighbors=k)\n        clf = clf.fit(x_train, y_train)\n        y_pred_val = clf.predict(x_val)\n        y_prob_val = clf.predict_proba(x_val)[:,1]\n        # display = RocCurveDisplay.from_estimator(clf, x_val, y_val, ax=axes[i])\n        \n        acc_val_knn[i] = accuracy_score(y_val, y_pred_val)\n        auc_val_knn[i] = roc_auc_score(y_val, y_prob_val)\n\n        clf = DecisionTreeClassifier(random_state=1)\n        clf.fit(x_train, y_train)\n        y_pred_val = clf.predict(x_val)\n        y_prob_val = clf.predict_proba(x_val)[:,1]\n\n        acc_val_tree[i] = accuracy_score(y_val, y_pred_val)\n        auc_val_tree[i] = roc_auc_score(y_val, y_prob_val)\n        \n    print(\"KNN Accuracy scores\")\n    print(f\"acc_score: {np.mean(acc_val_knn):.3f} ±{np.std(acc_val_knn):.2f}\")\n    print(f\"auc_score: {np.mean(auc_val_knn):.3f} ±{np.std(auc_val_knn):.2f}\")\n    print(\"_\"*30)\n    print(\"Decision Tree Accuracy scores\")\n    print(f\"acc_score: {np.mean(acc_val_knn):.3f} ±{np.std(acc_val_tree):.2f}\")\n    print(f\"auc_score: {np.mean(auc_val_knn):.3f} ±{np.std(auc_val_tree):.2f}\")\n    print()",
    "execution_count": null,
@@ -408,10 +409,7 @@
     "execution_start": 1649277258838,
     "execution_millis": 8,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 118,
-    "deepnote_output_heights": [
-     21
-    ]
+    "deepnote_cell_height": 118.1875
    },
    "source": "x.shape",
    "execution_count": null,
@@ -436,10 +434,7 @@
     "execution_start": 1649277265651,
     "execution_millis": 7,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 118,
-    "deepnote_output_heights": [
-     21
-    ]
+    "deepnote_cell_height": 118.1875
    },
    "source": "xj.shape",
    "execution_count": null,
