Everything works now

--- a/handin/figures/task4_table.tex
+++ b/handin/figures/task4_table.tex
@@ -1,8 +1,8 @@
 \begin{tabular}{lrr}
 \toprule
-            &   Accuracy score &   ROC Auc score \\
+ Classifier                    &   Accuracy score &   ROC Auc score \\
 \midrule
- classifier &            0.507 &           0.596 \\
- json       &            0.563 &           0.61  \\
+ Normal classifier             &            0.507 &           0.596 \\
+ Classifier with JSON features &            0.563 &           0.61  \\
 \bottomrule
 \end{tabular}
